--- a/TotalFusionApi.csproj
+++ b/TotalFusionApi.csproj
@@ -16,4 +16,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RavenDB.Client" Version="4.0.0-*" />
+  </ItemGroup>
+
 </Project>
