--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,9 @@
         "Default": "Warning"
       }
     }
+  },
+  "Raven": {
+    "Url": "http://localhost:8080",
+    "Database": "TotalFusion"
   }
 }
